--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,10 @@ a {
   --bg-color: #1f242d;
   --second-bg-color: #323946;
   --text-color: #240046;
-  --main-color: #7b2cbf;
-  --neon-color: #9500ff;
-  --dark-turquoise-light: rgba(25, 187, 199, .08);
-  --dark-turquoise-2: rgba(26, 185, 197, .35);
+  --main-color: #CF0070;
+  --neon-color: #ff00c3;
+  --dark-turquoise-light: rgba(193, 230, 233, 0.08);
+  --dark-turquoise-2: rgba(227, 137, 206, 0.35);
 }
 
 html {
@@ -41,7 +41,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(to right, #c9d6ff, #b7a1f287);
+  background-color: #EBEFF2;
   height: 100%;
 }
 
@@ -62,7 +62,7 @@ body {
 }
 
 .footer {
-  background-color: var(--white);
+  background-color: #edfafb;
   background-image: url("https://cdn.prod.website-files.com/6139cf517cd6d26ff1548b86/62a225ce03e447057636c2b8_post%20(1).png"), linear-gradient(to bottom, var(--dark-turquoise-light), var(--dark-turquoise-light));
   background-position: 100% 100%, 0 0;
   background-repeat: no-repeat, repeat;
@@ -105,7 +105,7 @@ a {
 }
 
 .container button {
-  background-color: #512da8;
+  background-color: #CF0070;
   color: #fff;
   font-size: 12px;
   padding: 10px 45px;
@@ -272,7 +272,7 @@ a {
   transition: all 0.6s ease-in-out;
   border-radius: 150px 0 0 100px;
   z-index: 1000;
-  background-color: #512da8;
+  background-color: #CF0070;
 }
 
 .container.active .toggle-container {
@@ -281,9 +281,9 @@ a {
 }
 
 .toggle {
-  background-color: #512da8;
+  background-color: #CF0070;
   height: 100%;
-  background: linear-gradient(to right, #5c6bc0, #512da8);
+  background: linear-gradient(to right, #5c6bc0, #CF0070);
   color: #fff;
   position: relative;
   left: -100%;
@@ -421,7 +421,7 @@ a {
 .navbar .home:hover,
 .navbar .home.active {
   color: white;
-  background-color: #512da8;
+  background-color: #CF0070;
   border-radius: 10px;
 }
 
@@ -565,7 +565,7 @@ span {
 }
 
 .about {
-  background: linear-gradient(to right, #E6F7FF, #c9d6ff);
+  background: linear-gradient(to right, #fcecea, #fef7ed);
 }
 
 @media (min-width: 1785px) {
@@ -1429,7 +1429,7 @@ table td {
 }
 .toggle-button button {
   align-self: center;
-  background-color: #512da8;
+  background-color: #CF0070;
   color: #fff;
   font-size: 16px;
   padding: 10px 20px;
@@ -1615,7 +1615,7 @@ table td {
   }
   
   .toggle-button button {
-    background-color: #007bff;
+    background-color: #CF0070;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -1624,7 +1624,7 @@ table td {
   }
   
   .toggle-button button:hover {
-    background-color: #0056b3;
+    background-color: #CF0070;
   }  
   .cancel-button:disabled {
     background-color: #6c757d; 
@@ -1760,9 +1760,6 @@ table td {
 .container.pet-container {
   width: 680px;
 }
-.update-account-page {
-
-}
 a.btn:hover {
   cursor: pointer;
 }
@@ -1843,7 +1840,7 @@ a.btn:hover {
     transition: all 0.6s ease-in-out;
     border-radius: 150px 0 0 100px;
     z-index: 1000;
-    background-color: #512da8;
+    background-color: #5c6bc0;
 
 }
 
@@ -1853,9 +1850,9 @@ a.btn:hover {
 }
 
 .toggle {
-    background-color: #512da8;
+    background-color: #5c6bc0;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #5c6bc0, #CF0070);
     color: #fff;
     position: relative;
     left: -100%;
@@ -2923,23 +2920,16 @@ text-decoration: underline;
   
   .about-image {
     flex: 1;
-    max-width: 40%; 
+    max-width: 35%; 
     display: flex;
     justify-content: center;
     align-items: center; 
   }
-  .about-image2{
-    flex: 1;
-    max-width: 40%; 
-    display: flex;
-    justify-content: center; /* Center the image horizontally */
-    align-items: center; 
-  }
   .img-about {
-    width: 410px;
-    height: 410px;
     border-radius: 50%; /* Make the image circular */
     object-fit: cover; /* Ensure the image covers the entire area of its container */
+    margin-top: -60px;
+    margin-left: 100px;
   }
   
   .about-image img {
@@ -2949,11 +2939,12 @@ text-decoration: underline;
   
   .about-text {
     flex: 1;
-    max-width: 50%; /* Ensure the text container doesn't exceed half the width */
+    max-width: 50%; 
     width: 50%;
   }
   .about-text2 {
-    flex: 1;
+    margin-left: 200px;
+    margin-top: 100px;
     max-width: 50%; /* Ensure the text container doesn't exceed half the width */
     width: 50%;
   }
@@ -2970,7 +2961,7 @@ text-decoration: underline;
     text-align: center;
     font-size: 50px ;
     font-family: "Work Sans Semi Bold";
-    color: #655CDF;
+    color: #fb7c7b;
     font-size: 50px;
 }
   .font_1 {
@@ -2981,7 +2972,7 @@ text-decoration: underline;
   .font_2 {
     font-size: 50px;
     font-family: 'Work Sans Semi Bold';
-    color: #655CDF;
+    color: #fb7c7b;
     position: relative;
     top: 150px;
     text-align: center;
@@ -2989,14 +2980,14 @@ text-decoration: underline;
   .font_3{
     font-size: 50px;
     font-family: 'Work Sans Semi Bold';
-    color: blue;
+    color: #fb7c7b;
     text-align: center;
     margin-bottom: 50px;
   }
   .font_4{
     font-size: 50px;
     font-family: 'Work Sans Semi Bold';
-    color: blue;
+    color: #fb7c7b;
     text-align: center;
     margin-bottom: 50px;
     margin-top: 150px;
@@ -3189,7 +3180,7 @@ box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); /* Tăng bóng đổ khi phóng to */
 }
 
 .contact{
-  background: linear-gradient(to right, #E6F7FF, #c9d6ff);
+    background: linear-gradient(to right, #fcecea, #fef7ed);
     display: flex;
     justify-content: space-between;
 }
@@ -3262,7 +3253,7 @@ span.us {
     color: var(--neon-color);
   }
   .footer-footer {
-    background: linear-gradient(to right, #E6F7FF, #c9d6ff);
+    background: linear-gradient(to right, #ebeff2, #c9d6ff);
     display: flex;
     text-align: center;
     justify-content: space-between ;
@@ -3280,20 +3271,17 @@ span.us {
     text-decoration: underline;
   }
   
-  .question{
-    
-  }
   .quick-question{
     margin-top: 50px;
-    font-size: 16px; /* Font chữ mặc định */
+    font-size: 16px;
     text-align: start;
-    color: #612889;
   }
 .quick-question .quick-question1,
 .quick-question .quick-question2,
 .quick-question .quick-question3 {
-  font-size: 18px; /* Font chữ lớn hơn cho các câu hỏi */
-  font-weight: bold; /* In đậm */
+  font-size: 18px; 
+  font-weight: bold;
+  color: #CF0070;
 }
 .quick-answer1{
     margin-bottom: 20px;
@@ -4243,6 +4231,10 @@ z-index: 1000000;
   border-radius: 5px;
   margin: 20px 10px 0 0;
   padding: 20px 0;
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
 }
 
 .confirm-detailed-booking h2 {
@@ -4761,3 +4753,64 @@ span.text {
   pointer-events: none;
   z-index: 1000;
 }
+.text-about2{
+  font-size: 30px;
+  font-weight: bold;
+  white-space: nowrap;
+}
+
+
+.testimonials-vet {
+  font-family: Arial, sans-serif;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  width: 80%;
+  max-width: 1200px;
+  margin-left: 150px;
+  margin-top: -100px;
+  margin-bottom: -200px;
+  justify-content: space-between;
+}
+
+.testimonial-vet {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  width: 30%;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.3s ease; 
+
+}
+
+.quote {
+  font-size: 16px;
+  color: #333;
+  margin-bottom: 20px;
+  line-height: 1.5;
+}
+
+
+.profile img {
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  margin-bottom: 10px;
+}
+
+.name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.title {
+  font-size: 14px;
+  color: #777;
+}
+
+
